--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -3,10 +3,10 @@
 .container {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  // overflow: hidden;
 
   &__body {
-    min-width: 100vw;
+    min-width: 100%;
     background-color: variables.$primary-color;
   }
 }
